--- a/www/index.html
+++ b/www/index.html
@@ -28,15 +28,17 @@
     <body>		<!-- page 1 -->
 		<div data-role="page" id="homePage">
 			<div data-role="header">
-				<h1>Receta tortilla</h1>
+				<h1>Cosas a fer</h1>
+				<input type="text" name="ntask" id="ntask" 
+            placeholder="tasca 'Nova tasca">
 			</div>
-			<ul data-role="listview">
-				<li>Romper huevos</li>
-				<li>Batir huevos</li>
-				<li>Calentar sarten</li>
-				<li>Hechar huevos</li>
-				<li>Dar buelta</li>
-				<li>retirar tortilla</li>
+			<button id="add_button">Afegeix</button>
+			<ul data-role="listview" id="taskList">
+				<li>Aixecarse del llit</li>
+				<li>mirar netflix</li>
+				<li>mirar amazon video</li>
+				<li>mirar disney +</li>
+				<li>mirar HBO</li>
 			</ul>
 			
 			
